--- a/package.json
+++ b/package.json
@@ -23,9 +23,11 @@
     "hardhat:test": "yarn workspace @se-2/hardhat test",
     "test": "yarn hardhat:test",
     "start": "yarn workspace tinybid-nillion-blind-app dev",
+    "next:lint": "yarn workspace tinybid-nillion-blind-app lint",
     "next:format": "yarn workspace tinybid-nillion-blind-app format",
     "next:check-types": "yarn workspace tinybid-nillion-blind-app check-types",
     "postinstall": "husky install",
+    "precommit": "lint-staged",
     "vercel": "yarn workspace tinybid-nillion-blind-app vercel",
     "vercel:yolo": "yarn workspace tinybid-nillion-blind-app vercel:yolo",
     "nillion": "yarn workspace @se-2/nillion nillion",
